manifests/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
spec:
  tls:
  - hosts: 
    - "tcc-unicarioca.tech"
    secretName: api-secret
  ingressClassName: nginx
  rules:
  - host: "tcc-unicarioca.tech"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myapp
            port:
              number: 80
